=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Fixed: Lightbox Album: Album Navigator - Fixed spurious incorrect tab calls, Corrected alignment. (windmillway) 
 - Fixed: Re-order Media: corrected wrong path for include in individual.php. (windmillway)
 - Fixed: Re-order Media: corrected omission for when Googlemaps not installed (windmillway)
 - Fixed: Corrected Reorder Media links when Googlemaps not installed (windmillway)
 - Changed: Hide Media Re-order links if number of Media items is less than 2 (windmillway)
 - Fixed [ 1979392 ] English extra.xx.php text shown in languages (canajun2eh)
 - Changed: Moved Reorder files to Includes directory, made media tab reorder media link a button (windmillway)
 - Fixed: [ 1952483 ] Fill Unknown Name - not working (fisharebest)
 - Fixed: [ 1952481 ] Special Unknown Names do not print OK (fisharebest)
 - Fixed: [ 1941609 ] Prefix mixes up sort (fisharebest)
 - Fixed: [ 1346616 ] Improper Sorting on Name Prefixes (fisharebest)
 - Added: New framework for name handlinga (fisharebest)
 - Changed: Allow Login block on Portal page (shows as Logout block) (canajun2eh)
 - Fixed: [ 1977981 ] login.php leads to empty Indy - and Wrong Admin ID (canajun2eh)
 - Fixed: Bogus message about missing cookie support on Login page (canajun2eh)
 - Added: New drag and drop Media Sort Function for Lightbox and Media Tabs (windmillway)
 - Fixed: [ 1970563 ] SVN 3115 _CHR_CHIL appears as gedcom error (fisharebest)
 - Changed: Lightbox: - Fixed Firefox dragNdrop erroneous initial displacement when in zoom mode (windmillway)
 - Fixed: [ 1940401 ] GEDCOM changes notification  (fisharebest)
 - Fixed: [ 1764343 ] login after login (fisharebest)
 - Fixed: [ 1774725 ] problem in login in site with several Gedcoms (fisharebest)